WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73449
RetainPtr's move assignment operators don't modify the pointer being assigned to
https://bugs.webkit.org/show_bug.cgi?id=73449
Summary
RetainPtr's move assignment operators don't modify the pointer being assigned to
Adam Roben (:aroben)
Reported
2011-11-30 08:13:24 PST
RetainPtr's move assignment operators don't modify the pointer being assigned to!
Attachments
Fix RetainPtr's move assignment operators
(1.69 KB, patch)
2011-11-30 08:14 PST
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-11-30 08:14:37 PST
Created
attachment 117197
[details]
Fix RetainPtr's move assignment operators
Anders Carlsson
Comment 2
2011-11-30 08:32:30 PST
Comment on
attachment 117197
[details]
Fix RetainPtr's move assignment operators It's so embarrassing that I didn't catch this in my initial review!
Adam Roben (:aroben)
Comment 3
2011-11-30 08:39:22 PST
Committed
r101521
: <
http://trac.webkit.org/changeset/101521
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug