Fix RetainPtr's move assignment operators

Fixes <http://webkit.org/b/73449> RetainPtr's move assignment operators don't modify the
pointer being assigned to

I didn't write a test for this because we don't have a way of unit testing C++11 code (see
<http://webkit.org/b/73448>).

Reviewed by Anders Carlsson.

* wtf/RetainPtr.h:
(WTF::RetainPtr::operator=): Adopt the passed-in RetainPtr's underlying pointer, not our own
pointer.

Canonical link: https://commits.webkit.org/90002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101521 268f45cc-cd09-0410-ab3c-d52691b4dbfc